--- a/Utbk_iOS/Utbk_iOS/ViewControllers/Assets/BTAssetsViewController.xib
+++ b/Utbk_iOS/Utbk_iOS/ViewControllers/Assets/BTAssetsViewController.xib
@@ -1,22 +1,88 @@
-<?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="13142" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<?xml version="1.0" encoding="UTF-8"?>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="15705" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+    <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="12042"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="15706"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="BTAssetsViewController">
             <connections>
+                <outlet property="tableView" destination="mTL-LB-J8e" id="rPx-pD-PFs"/>
+                <outlet property="totalAccount" destination="vwh-z1-4cd" id="I6R-3a-HxG"/>
                 <outlet property="view" destination="i5M-Pr-FkT" id="sfx-zR-JGt"/>
             </connections>
         </placeholder>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <view clearsContextBeforeDrawing="NO" contentMode="scaleToFill" id="i5M-Pr-FkT">
-            <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+            <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-            <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+            <subviews>
+                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="5il-vG-aTH">
+                    <rect key="frame" x="12" y="64" width="390" height="120"/>
+                    <subviews>
+                        <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="7G7-bF-8pe">
+                            <rect key="frame" x="0.0" y="0.0" width="390" height="120"/>
+                        </imageView>
+                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="总资产" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="UL3-le-aN8">
+                            <rect key="frame" x="24" y="32" width="43" height="17"/>
+                            <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                            <color key="textColor" red="0.80000000000000004" green="0.80000000000000004" blue="0.80000000000000004" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                            <nil key="highlightedColor"/>
+                        </label>
+                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="0.000000" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="vwh-z1-4cd">
+                            <rect key="frame" x="24" y="68" width="104.5" height="18"/>
+                            <constraints>
+                                <constraint firstAttribute="height" constant="18" id="GtC-Vi-4vA"/>
+                            </constraints>
+                            <fontDescription key="fontDescription" type="boldSystem" pointSize="21"/>
+                            <color key="textColor" red="0.65490196079999996" green="0.52549019610000003" blue="0.34901960780000002" alpha="1" colorSpace="calibratedRGB"/>
+                            <nil key="highlightedColor"/>
+                        </label>
+                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="USDT" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="m86-yb-xgG">
+                            <rect key="frame" x="133.5" y="71.5" width="33" height="14.5"/>
+                            <fontDescription key="fontDescription" type="system" weight="medium" pointSize="12"/>
+                            <color key="textColor" red="0.65490196079999996" green="0.52549019610000003" blue="0.34901960780000002" alpha="1" colorSpace="calibratedRGB"/>
+                            <nil key="highlightedColor"/>
+                        </label>
+                    </subviews>
+                    <color key="backgroundColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                    <constraints>
+                        <constraint firstAttribute="height" constant="120" id="1ID-pN-7eb"/>
+                        <constraint firstAttribute="bottom" secondItem="7G7-bF-8pe" secondAttribute="bottom" id="2hY-2X-Cau"/>
+                        <constraint firstItem="vwh-z1-4cd" firstAttribute="leading" secondItem="UL3-le-aN8" secondAttribute="leading" id="69R-vf-Azj"/>
+                        <constraint firstItem="UL3-le-aN8" firstAttribute="leading" secondItem="5il-vG-aTH" secondAttribute="leading" constant="24" id="DoW-xq-iY4"/>
+                        <constraint firstItem="m86-yb-xgG" firstAttribute="leading" secondItem="vwh-z1-4cd" secondAttribute="trailing" constant="5" id="JJx-x9-od7"/>
+                        <constraint firstItem="7G7-bF-8pe" firstAttribute="top" secondItem="5il-vG-aTH" secondAttribute="top" id="Q3H-84-Qhb"/>
+                        <constraint firstItem="m86-yb-xgG" firstAttribute="bottom" secondItem="vwh-z1-4cd" secondAttribute="bottom" id="ftT-kA-xbq"/>
+                        <constraint firstItem="7G7-bF-8pe" firstAttribute="leading" secondItem="5il-vG-aTH" secondAttribute="leading" id="l32-et-Hfs"/>
+                        <constraint firstAttribute="trailing" secondItem="7G7-bF-8pe" secondAttribute="trailing" id="oem-Qk-4xF"/>
+                        <constraint firstItem="UL3-le-aN8" firstAttribute="top" secondItem="5il-vG-aTH" secondAttribute="top" constant="32" id="rlX-Hs-gVI"/>
+                        <constraint firstItem="vwh-z1-4cd" firstAttribute="top" secondItem="UL3-le-aN8" secondAttribute="bottom" constant="19" id="siC-Jr-PeR"/>
+                    </constraints>
+                </view>
+                <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="mTL-LB-J8e">
+                    <rect key="frame" x="12" y="194" width="390" height="668"/>
+                    <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                    <connections>
+                        <outlet property="dataSource" destination="-1" id="W1B-tx-zmK"/>
+                        <outlet property="delegate" destination="-1" id="zM5-Lq-BqH"/>
+                    </connections>
+                </tableView>
+            </subviews>
+            <color key="backgroundColor" red="0.94117647058823528" green="0.94117647058823528" blue="0.94117647058823528" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+            <constraints>
+                <constraint firstItem="mTL-LB-J8e" firstAttribute="leading" secondItem="Q5M-cg-NOt" secondAttribute="leading" constant="12" id="0dg-fd-wLo"/>
+                <constraint firstItem="Q5M-cg-NOt" firstAttribute="trailing" secondItem="5il-vG-aTH" secondAttribute="trailing" constant="12" id="WiY-gZ-eU9"/>
+                <constraint firstItem="Q5M-cg-NOt" firstAttribute="trailing" secondItem="mTL-LB-J8e" secondAttribute="trailing" constant="12" id="Zb3-Og-GzB"/>
+                <constraint firstItem="mTL-LB-J8e" firstAttribute="top" secondItem="5il-vG-aTH" secondAttribute="bottom" constant="10" id="fJW-aj-Thf"/>
+                <constraint firstItem="5il-vG-aTH" firstAttribute="top" secondItem="Q5M-cg-NOt" secondAttribute="top" constant="20" id="jOy-1x-H7q"/>
+                <constraint firstItem="Q5M-cg-NOt" firstAttribute="bottom" secondItem="mTL-LB-J8e" secondAttribute="bottom" id="mDo-le-w5G"/>
+                <constraint firstItem="5il-vG-aTH" firstAttribute="leading" secondItem="Q5M-cg-NOt" secondAttribute="leading" constant="12" id="xdj-nu-jyq"/>
+            </constraints>
             <viewLayoutGuide key="safeArea" id="Q5M-cg-NOt"/>
+            <point key="canvasLocation" x="137.68115942028987" y="124.55357142857142"/>
         </view>
     </objects>
 </document>
