--- a/Utbk_iOS/Utbk_iOS/ViewControllers/Assets/View/BTAssetsCell.xib
+++ b/Utbk_iOS/Utbk_iOS/ViewControllers/Assets/View/BTAssetsCell.xib
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="15705" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="16097.3" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="15706"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="16087"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -75,9 +75,6 @@
                                 <color key="textColor" red="0.59999999999999998" green="0.59999999999999998" blue="0.59999999999999998" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="icon_walletEnter" translatesAutoresizingMaskIntoConstraints="NO" id="6jw-fP-tcE">
-                                <rect key="frame" x="254" y="64.5" width="12" height="12"/>
-                            </imageView>
                             <button opaque="NO" tag="100" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Fe1-4A-qdI">
                                 <rect key="frame" x="15" y="105" width="72" height="26"/>
                                 <color key="backgroundColor" red="0.90980392156862744" green="0.90980392156862744" blue="0.90980392156862744" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
@@ -129,6 +126,17 @@
                                     <action selector="cellBtnActions:" destination="KGk-i7-Jjw" eventType="touchUpInside" id="GQG-jJ-TZ9"/>
                                 </connections>
                             </button>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="eF3-73-vgm">
+                                <rect key="frame" x="251" y="55.5" width="30" height="30"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="30" id="VGd-65-GQp"/>
+                                    <constraint firstAttribute="width" constant="30" id="X57-qA-seJ"/>
+                                </constraints>
+                                <state key="normal" image="icon_walletEnter"/>
+                                <connections>
+                                    <action selector="assetsDetail:" destination="KGk-i7-Jjw" eventType="touchUpInside" id="ngp-4G-0SQ"/>
+                                </connections>
+                            </button>
                         </subviews>
                         <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                         <constraints>
@@ -142,8 +150,8 @@
                             <constraint firstItem="bTj-rg-Bhr" firstAttribute="centerY" secondItem="hHb-Xa-bwW" secondAttribute="centerY" id="Emz-1R-G47"/>
                             <constraint firstItem="LLP-hH-Hdc" firstAttribute="width" secondItem="Fe1-4A-qdI" secondAttribute="width" id="FoD-T2-OTk"/>
                             <constraint firstItem="Wed-uH-1iW" firstAttribute="leading" secondItem="yC7-Im-MwH" secondAttribute="leading" constant="12" id="LZH-Mv-lrx"/>
+                            <constraint firstItem="eF3-73-vgm" firstAttribute="centerY" secondItem="yC7-Im-MwH" secondAttribute="centerY" id="PS3-NM-6fy"/>
                             <constraint firstItem="Fe1-4A-qdI" firstAttribute="leading" secondItem="yC7-Im-MwH" secondAttribute="leading" constant="15" id="QQi-jq-OHp"/>
-                            <constraint firstItem="6jw-fP-tcE" firstAttribute="centerY" secondItem="yC7-Im-MwH" secondAttribute="centerY" id="SJL-Tk-yWD"/>
                             <constraint firstItem="Hnl-DT-P3H" firstAttribute="leading" secondItem="Wed-uH-1iW" secondAttribute="leading" id="UrM-pe-roQ"/>
                             <constraint firstItem="7I2-aR-6yd" firstAttribute="centerX" secondItem="yC7-Im-MwH" secondAttribute="centerX" constant="-10" id="VuQ-cg-zL0"/>
                             <constraint firstItem="LLP-hH-Hdc" firstAttribute="height" secondItem="Fe1-4A-qdI" secondAttribute="height" multiplier="1.07692" id="XKB-Lu-1lF"/>
@@ -152,11 +160,11 @@
                             <constraint firstItem="bTj-rg-Bhr" firstAttribute="leading" secondItem="7I2-aR-6yd" secondAttribute="leading" id="htZ-5h-dRN"/>
                             <constraint firstItem="sab-1W-5qd" firstAttribute="centerY" secondItem="Wed-uH-1iW" secondAttribute="centerY" id="iWP-n1-PCG"/>
                             <constraint firstAttribute="trailing" secondItem="sab-1W-5qd" secondAttribute="trailing" constant="-10" id="jej-Iu-dEY"/>
+                            <constraint firstAttribute="trailing" secondItem="eF3-73-vgm" secondAttribute="trailing" constant="15" id="jxO-Z7-sJf"/>
                             <constraint firstAttribute="trailing" secondItem="esD-Bn-T39" secondAttribute="trailing" constant="15" id="k92-yp-OTy"/>
                             <constraint firstItem="7I2-aR-6yd" firstAttribute="centerY" secondItem="Hnl-DT-P3H" secondAttribute="centerY" id="lE6-7h-Sfa"/>
                             <constraint firstAttribute="bottom" secondItem="Fe1-4A-qdI" secondAttribute="bottom" constant="10" id="lGZ-jZ-o2R"/>
                             <constraint firstItem="esD-Bn-T39" firstAttribute="width" secondItem="Fe1-4A-qdI" secondAttribute="width" id="ldd-M9-moZ"/>
-                            <constraint firstAttribute="trailing" secondItem="6jw-fP-tcE" secondAttribute="trailing" constant="30" id="ljX-BH-rwx"/>
                             <constraint firstItem="hHb-Xa-bwW" firstAttribute="leading" secondItem="Wed-uH-1iW" secondAttribute="leading" id="pcQ-h2-nWF"/>
                             <constraint firstItem="esD-Bn-T39" firstAttribute="centerY" secondItem="Fe1-4A-qdI" secondAttribute="centerY" id="ySu-f2-Nke"/>
                         </constraints>
