--- a/Utbk_iOS/Utbk_iOS/ViewControllers/Profile/BTShareWalletVC.xib
+++ b/Utbk_iOS/Utbk_iOS/ViewControllers/Profile/BTShareWalletVC.xib
@@ -1,22 +1,101 @@
-<?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="13142" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<?xml version="1.0" encoding="UTF-8"?>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="16097.3" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+    <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="12042"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="16087"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="BTShareWalletVC">
             <connections>
+                <outlet property="codeImageView" destination="dfz-5S-ctQ" id="xfr-g2-O7W"/>
                 <outlet property="view" destination="i5M-Pr-FkT" id="sfx-zR-JGt"/>
             </connections>
         </placeholder>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <view clearsContextBeforeDrawing="NO" contentMode="scaleToFill" id="i5M-Pr-FkT">
-            <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+            <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+            <subviews>
+                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="icon_shareWalletbj" translatesAutoresizingMaskIntoConstraints="NO" id="271-32-RTU">
+                    <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                </imageView>
+                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="HST-Kk-udf">
+                    <rect key="frame" x="38" y="279" width="338" height="338"/>
+                    <subviews>
+                        <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="dfz-5S-ctQ">
+                            <rect key="frame" x="45" y="24" width="248" height="239"/>
+                            <constraints>
+                                <constraint firstAttribute="width" secondItem="dfz-5S-ctQ" secondAttribute="height" multiplier="222:214" id="HbQ-bL-24P"/>
+                            </constraints>
+                        </imageView>
+                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="扫码下载APP" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Tn6-rH-Zu2">
+                            <rect key="frame" x="124" y="276" width="90" height="18"/>
+                            <fontDescription key="fontDescription" type="system" pointSize="15"/>
+                            <color key="textColor" red="0.20000000000000001" green="0.20000000000000001" blue="0.20000000000000001" alpha="1" colorSpace="calibratedRGB"/>
+                            <nil key="highlightedColor"/>
+                        </label>
+                    </subviews>
+                    <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                    <constraints>
+                        <constraint firstItem="Tn6-rH-Zu2" firstAttribute="top" secondItem="dfz-5S-ctQ" secondAttribute="bottom" constant="13" id="2Rl-5z-2j5"/>
+                        <constraint firstItem="dfz-5S-ctQ" firstAttribute="centerX" secondItem="HST-Kk-udf" secondAttribute="centerX" id="V96-8w-nXi"/>
+                        <constraint firstItem="Tn6-rH-Zu2" firstAttribute="centerX" secondItem="HST-Kk-udf" secondAttribute="centerX" id="ji5-Bn-qZM"/>
+                        <constraint firstItem="dfz-5S-ctQ" firstAttribute="top" secondItem="HST-Kk-udf" secondAttribute="top" constant="24" id="lWU-rV-ZNg"/>
+                        <constraint firstAttribute="width" secondItem="HST-Kk-udf" secondAttribute="height" multiplier="1:1" id="nMN-Bd-Cz0"/>
+                        <constraint firstItem="dfz-5S-ctQ" firstAttribute="leading" secondItem="HST-Kk-udf" secondAttribute="leading" constant="45" id="x6R-ie-UaK"/>
+                    </constraints>
+                    <userDefinedRuntimeAttributes>
+                        <userDefinedRuntimeAttribute type="number" keyPath="cornerRadius">
+                            <real key="value" value="4"/>
+                        </userDefinedRuntimeAttribute>
+                    </userDefinedRuntimeAttributes>
+                </view>
+                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="scc-VA-gZb">
+                    <rect key="frame" x="20" y="44" width="20" height="22"/>
+                    <state key="normal" image="icon_cardBack"/>
+                    <connections>
+                        <action selector="backAction:" destination="-1" eventType="touchUpInside" id="gFx-iq-nCR"/>
+                    </connections>
+                </button>
+                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="分享钱包" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="cyq-3A-rVM">
+                    <rect key="frame" x="170.5" y="44.5" width="73.5" height="21"/>
+                    <fontDescription key="fontDescription" type="system" weight="medium" pointSize="18"/>
+                    <color key="textColor" red="0.90980392160000001" green="0.90980392160000001" blue="0.90980392160000001" alpha="1" colorSpace="calibratedRGB"/>
+                    <nil key="highlightedColor"/>
+                </label>
+                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="W2F-7R-pv2">
+                    <rect key="frame" x="371" y="43.5" width="23" height="23"/>
+                    <state key="normal" image="icon_shareWallet"/>
+                    <connections>
+                        <action selector="shareAction:" destination="-1" eventType="touchUpInside" id="aFJ-ld-V82"/>
+                    </connections>
+                </button>
+            </subviews>
             <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+            <constraints>
+                <constraint firstItem="cyq-3A-rVM" firstAttribute="centerX" secondItem="i5M-Pr-FkT" secondAttribute="centerX" id="8ac-eh-dvE"/>
+                <constraint firstItem="HST-Kk-udf" firstAttribute="centerY" secondItem="i5M-Pr-FkT" secondAttribute="centerY" id="92v-nu-CnI"/>
+                <constraint firstItem="271-32-RTU" firstAttribute="trailing" secondItem="Q5M-cg-NOt" secondAttribute="trailing" id="BC3-Lt-vWY"/>
+                <constraint firstItem="HST-Kk-udf" firstAttribute="centerX" secondItem="i5M-Pr-FkT" secondAttribute="centerX" id="G1Z-ds-1OG"/>
+                <constraint firstAttribute="bottom" secondItem="271-32-RTU" secondAttribute="bottom" id="KPx-EL-TEB"/>
+                <constraint firstItem="cyq-3A-rVM" firstAttribute="centerY" secondItem="scc-VA-gZb" secondAttribute="centerY" id="Q2y-Pf-bn4"/>
+                <constraint firstItem="HST-Kk-udf" firstAttribute="leading" secondItem="Q5M-cg-NOt" secondAttribute="leading" constant="38" id="SGB-AW-PAh"/>
+                <constraint firstItem="271-32-RTU" firstAttribute="top" secondItem="i5M-Pr-FkT" secondAttribute="top" id="TaP-jK-kOj"/>
+                <constraint firstItem="271-32-RTU" firstAttribute="leading" secondItem="Q5M-cg-NOt" secondAttribute="leading" id="ata-rH-toE"/>
+                <constraint firstItem="scc-VA-gZb" firstAttribute="top" secondItem="Q5M-cg-NOt" secondAttribute="top" id="ax5-mp-Rmh"/>
+                <constraint firstItem="Q5M-cg-NOt" firstAttribute="trailing" secondItem="W2F-7R-pv2" secondAttribute="trailing" constant="20" id="eC8-up-pgK"/>
+                <constraint firstItem="scc-VA-gZb" firstAttribute="leading" secondItem="Q5M-cg-NOt" secondAttribute="leading" constant="20" id="guo-q9-ZqJ"/>
+                <constraint firstItem="W2F-7R-pv2" firstAttribute="centerY" secondItem="scc-VA-gZb" secondAttribute="centerY" id="wWP-RH-VB5"/>
+            </constraints>
             <viewLayoutGuide key="safeArea" id="Q5M-cg-NOt"/>
+            <point key="canvasLocation" x="131.8840579710145" y="153.34821428571428"/>
         </view>
     </objects>
+    <resources>
+        <image name="icon_cardBack" width="20" height="20"/>
+        <image name="icon_shareWallet" width="23" height="23"/>
+        <image name="icon_shareWalletbj" width="375.5" height="667"/>
+    </resources>
 </document>
