--- a/Utbk_iOS/Utbk_iOS/ViewControllers/Profile/WalletManager/BTModifyTradePasswordVC.xib
+++ b/Utbk_iOS/Utbk_iOS/ViewControllers/Profile/WalletManager/BTModifyTradePasswordVC.xib
@@ -165,17 +165,10 @@
                     </userDefinedRuntimeAttributes>
                 </view>
                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" usesAttributedText="YES" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="r5k-Ua-GZz">
-                    <rect key="frame" x="24" y="351.5" width="366" height="27"/>
+                    <rect key="frame" x="24" y="351.5" width="366" height="29"/>
                     <attributedString key="attributedText">
-                        <fragment content="温馨提示：请牢记您的提币密码，如果遗忘将无法找回，">
-                            <attributes>
-                                <color key="NSColor" red="0.6588235294117647" green="0.52549019607843139" blue="0.3529411764705882" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                                <font key="NSFont" size="12" name=".PingFangSC-Regular"/>
-                            </attributes>
-                        </fragment>
                         <fragment>
-                            <string key="content" base64-UTF8="YES">
-Cg
+                            <string key="content">温馨提示：请牢记您的提币密码，如果遗忘将无法找回，
 </string>
                             <attributes>
                                 <color key="NSColor" red="0.6588235294117647" green="0.52549019607843139" blue="0.3529411764705882" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
@@ -185,14 +178,14 @@ Cg
                         <fragment content="将无法提现账户资产，请慎重！！">
                             <attributes>
                                 <color key="NSColor" red="0.6588235294117647" green="0.52549019607843139" blue="0.3529411764705882" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                                <font key="NSFont" size="12" name=".PingFangSC-Regular"/>
+                                <font key="NSFont" metaFont="cellTitle"/>
                                 <paragraphStyle key="NSParagraphStyle" alignment="natural" lineBreakMode="wordWrapping" baseWritingDirection="natural" lineSpacing="10" tighteningFactorForTruncation="0.0"/>
                             </attributes>
                         </fragment>
                     </attributedString>
                 </label>
                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="oGy-Ei-Prx">
-                    <rect key="frame" x="39" y="428.5" width="336" height="44"/>
+                    <rect key="frame" x="39" y="430.5" width="336" height="44"/>
                     <color key="backgroundColor" red="0.80000000000000004" green="0.80000000000000004" blue="0.80000000000000004" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                     <constraints>
                         <constraint firstAttribute="height" constant="44" id="YQ5-Ds-arG"/>
