--- a/Utbk_iOS/Utbk_iOS/ViewControllers/Profile/WalletManager/View/BTWalletManagerCell.xib
+++ b/Utbk_iOS/Utbk_iOS/ViewControllers/Profile/WalletManager/View/BTWalletManagerCell.xib
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="15705" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="16097.3" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="15706"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="16087"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -72,9 +72,6 @@
                                 <color key="textColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="icon_walletEnter" translatesAutoresizingMaskIntoConstraints="NO" id="NrL-iK-YqL">
-                                <rect key="frame" x="278" y="49" width="12" height="12"/>
-                            </imageView>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="muh-g8-SJ2">
                                 <rect key="frame" x="229.5" y="58.5" width="22" height="30"/>
                                 <constraints>
@@ -84,6 +81,17 @@
                                 <state key="normal" image="icon_profileCopy"/>
                                 <connections>
                                     <action selector="copyAddressAction:" destination="KGk-i7-Jjw" eventType="touchUpInside" id="Hgj-64-woP"/>
+                                </connections>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="PvF-HX-QEB">
+                                <rect key="frame" x="270" y="40" width="30" height="30"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="30" id="HiR-IP-RyP"/>
+                                    <constraint firstAttribute="height" constant="30" id="bmj-7Q-4Pd"/>
+                                </constraints>
+                                <state key="normal" image="icon_walletEnter"/>
+                                <connections>
+                                    <action selector="walletDetail:" destination="KGk-i7-Jjw" eventType="touchUpInside" id="c8a-pa-2Tf"/>
                                 </connections>
                             </button>
                         </subviews>
@@ -96,14 +104,14 @@
                             <constraint firstItem="YT5-2t-dAl" firstAttribute="centerY" secondItem="msT-ba-Y2y" secondAttribute="centerY" id="Dsw-XR-Fuv"/>
                             <constraint firstItem="muh-g8-SJ2" firstAttribute="centerY" secondItem="G1v-98-nYP" secondAttribute="centerY" id="Fep-7p-SQv"/>
                             <constraint firstItem="5Tg-eV-3iq" firstAttribute="top" secondItem="msT-ba-Y2y" secondAttribute="top" constant="32" id="IKd-aP-fJ6"/>
-                            <constraint firstAttribute="trailing" secondItem="NrL-iK-YqL" secondAttribute="trailing" constant="10" id="IW5-CS-ZAv"/>
+                            <constraint firstAttribute="trailing" secondItem="PvF-HX-QEB" secondAttribute="trailing" id="Q7T-Sg-9S5"/>
                             <constraint firstItem="5Tg-eV-3iq" firstAttribute="leading" secondItem="YT5-2t-dAl" secondAttribute="trailing" constant="16" id="StG-gT-oZQ"/>
                             <constraint firstItem="ezP-vX-CMs" firstAttribute="leading" secondItem="5Tg-eV-3iq" secondAttribute="trailing" constant="5" id="Vq4-Qm-ZKu"/>
                             <constraint firstItem="ezP-vX-CMs" firstAttribute="centerY" secondItem="5Tg-eV-3iq" secondAttribute="centerY" id="VxY-Qo-zPH"/>
-                            <constraint firstItem="NrL-iK-YqL" firstAttribute="centerY" secondItem="msT-ba-Y2y" secondAttribute="centerY" id="ZDB-c5-F5h"/>
                             <constraint firstItem="G1v-98-nYP" firstAttribute="top" secondItem="ezP-vX-CMs" secondAttribute="bottom" constant="20" id="cpR-lr-Yb5"/>
                             <constraint firstItem="muh-g8-SJ2" firstAttribute="leading" secondItem="G1v-98-nYP" secondAttribute="trailing" constant="5" id="eg2-JO-Op1"/>
                             <constraint firstItem="E9M-nU-IP1" firstAttribute="top" secondItem="msT-ba-Y2y" secondAttribute="top" constant="10" id="fAO-M6-2mL"/>
+                            <constraint firstItem="PvF-HX-QEB" firstAttribute="centerY" secondItem="msT-ba-Y2y" secondAttribute="centerY" id="in9-mb-hPG"/>
                         </constraints>
                         <userDefinedRuntimeAttributes>
                             <userDefinedRuntimeAttribute type="number" keyPath="cornerRadius">
